Post-v2.9.0
--------------------
   - ovs-vswitchd:
     * New options --l7 and --l7-len to "ofproto/trace" command.
     * Previous versions gave OpenFlow tables default names of the form
       "table#".  These are not helpful names for the purpose of accepting
       and displaying table names, so now tables by default have no names.
   - ovs-ofctl:
     * ovs-ofctl now accepts and display table names in place of numbers.  By
       default it always accepts names and in interactive use it displays them;
       use --names or --no-names to override.  See ovs-ofctl(8) for details.
   - ovs-vsctl: New commands "add-bond-iface" and "del-bond-iface".
   - OpenFlow:
     * OFPT_ROLE_STATUS is now available in OpenFlow 1.3.
   - Linux kernel 4.14
     * Add support for compiling OVS with the latest Linux 4.14 kernel

v2.9.0 - 19 Feb 2018
--------------------
   - NSH implementation now conforms to latest draft (draft-ietf-sfc-nsh-28).
     * Add ttl field.
     * Add a new action dec_nsh_ttl.
     * Enable NSH support in kernel datapath.
   - OVSDB:
     * New high-level documentation in ovsdb(7).
     * New file format documentation for developers in ovsdb(5).
     * Protocol documentation moved from ovsdb-server(1) to ovsdb-server(7).
     * ovsdb-client: New "get-schema-cksum" and "query" commands.
     * ovsdb-client: New "backup" and "restore" commands.
     * ovsdb-client: New --timeout option.
     * ovsdb-tool: New "db-name" and "schema-name" commands.
   - ovs-vsctl and other commands that display data in tables now support a
     --max-column-width option to limit column width.
   - No longer slow-path traffic that sends to a controller.  Applications,
     such as OVN ACL logging, want to send a copy of a packet to a
     controller while leaving the actual packet forwarding in the datapath.
   - OVN:
     * The "requested-chassis" option for a logical switch port now accepts a
       chassis "hostname" in addition to a chassis "name".
     * IPv6